# code

./: .gitignore  README.md  celsius-0-debug.rs  celsius-0.rs  ch1-hello2.rs  ch2-add-with-lifetimes.rs  ch2-add-with-lifetimes_.rs  ch2-define-type.rs  ch2-first-steps.rs  ch2-introducing-vec.rs  ch2-match-needles.rs  ch2-non-base2.rs  ch2-read-file-iter-lines.rs  ch2-simple-with-linenums  ch2-simple-with-linenums.rs  ch2-sparse-matrix.rs  ch2-str-simple-pattern.rs  ch3-noarg-macro.rs  ch4-absadd.rs  ch4-endianness.rs  ch4-usage-counters-3.rs  ch4-usage-counters.rs  ch5-factorial-fancy-generic.rs  ch5-int-clone.rs  ch5-message-store.rs  chx-flow-control-valve-channels.rs  chx-flow-control-valve.rs  chx-sensor-hidden-state.rs  chx-sensor-single-threaded.rs  convert-ipv4-1.rs  equation.rs  httpclient.rs  placeholder.txt  rustfmt.toml
.github/workflows/: codespell.yml
ch1/: ch1-animals-specialization.rs  ch1-animals.rs  ch1-escape-html.rs  ch1-hashmap-hashset.rs  ch1-save-user-data.rs  ch1-word-counts.rs
ch1-time-api/src/: main.rs
ch1/ch1-cereals/: Cargo.toml
ch1/ch1-fruit/: Cargo.toml
ch1/ch1-hello2/: Cargo.toml
ch1/ch1-letters/: Cargo.toml
ch1/ch1-penguins/: Cargo.toml
ch1/ch1-race/: Cargo.toml
ch1/ch1-time-api/: Cargo.toml
ch1/ch1-time-api/src/: main.rs
ch1/wordwrap/: Cargo.toml
ch10/ch10-busythreads/: Cargo.toml
ch10/ch10-busythreads-broken/: Cargo.toml
ch10/ch10-channels-complex/: Cargo.toml
ch10/ch10-channels-intro/: Cargo.toml
ch10/ch10-multijoin/: Cargo.toml
ch10/ch10-render-hex/: Cargo.toml
ch10/ch10-render-hex-functional/: Cargo.toml
ch10/ch10-render-hex-parallel-iterator/: Cargo.toml
ch10/ch10-render-hex-threadpool/: Cargo.toml
ch10/ch10-sharedpause-broken/: Cargo.toml
ch10/ch10-tcpproxy/: Cargo.toml
ch10/hexwords/: Cargo.toml
ch10/untitled/: Cargo.toml
ch11/ch11-fledgeos-0/: Cargo.toml  fledge.json
ch11/ch11-fledgeos-2/: Cargo.toml
ch11/ch11-fledgeos-3/: Cargo.toml  Makefile
ch11/ch11-fledgeos-4/: Makefile
ch11/ch11-fledgeos-_1/: Cargo.toml  Makefile
ch11/ch11-fledgeos-_1/src/: main.rs
ch12/: Vagrantfile  asm.rs  noop
ch12/ch10-basic-handler/: Cargo.toml  Dockerfile
ch12/ch10-callstack/: Cargo.toml
ch12/ch10-handle/: Cargo.toml
ch12/ch10-ignore/: Cargo.toml
ch12/ch10-sjlj/: Cargo.toml  Makefile
ch12/ch12-basic-handler/: Cargo.toml  Makefile
ch12/ch12-callstack/: Cargo.toml
ch12/ch12-handler/: Cargo.toml
ch12/ch12-ignore/: Cargo.toml
ch12/ch12-sig/: Cargo.toml
ch12/ch12-sixty/: Cargo.toml
ch12/ch12-sjlj/: Cargo.toml  Dockerfile
ch12/ch12-toy-global/: Cargo.toml
ch2/: ch2-3arrays.rs  ch2-add-floats.rs  ch2-add-with-lifetimes.rs  ch2-bell-numbers.rs  ch2-bufreader-lines.rs  ch2-first-steps.rs  ch2-generic-add.rs  ch2-intro-to-numbers.rs  ch2-intro.rs  ch2-introducing-vec.rs  ch2-match-needles.rs  ch2-needle-in-haystack.rs  ch2-non-base2  ch2-non-base2.rs  ch2-ok  ch2-ok.rs  ch2-read-file.rs  ch2-schelling-linear-1.rs  ch2-schelling-linear-full.rs  ch2-sensor-emulator.rs  ch2-simple-with-enumerate.rs  ch2-simple-with-linenums.rs  ch2-str-simple-pattern.rs  ch2-while-true-incr-count.rs  ch2-with-regex.rs  ok.rs
ch2/ch2-complex/: Cargo.toml
ch2/ch2-mandelbrot/: Cargo.toml
ch3/: ch3-adding-pub-to-file.rs  ch3-anystring-macro.rs  ch3-defining-files-neatly.rs  ch3-error-1.rs  ch3-file-doced.rs  ch3-file-states.rs  ch3-files-with-modes.rs  ch3-implementing-display.rs  ch3-mock-file.rs  ch3-newtype-pattern.rs  ch3-not-quite-file-1.rs  ch3-not-quite-file-2.rs  ch3-not-quite-file-3.rs  ch3-not-quite-file-4.rs  ch3-parse-log.rs  ch3-public-file.rs  ch3-return-result.rs  ch3-skeleton-read-trait.rs  ch3-string-macro.rs
ch3/filebasics/: Cargo.toml
ch3/fileresult/: Cargo.toml
ch3/globalerror/: Cargo.toml
ch4/: ch4-check-sats-1.rs  ch4-check-sats-2.rs  ch4-check-sats-3.rs  ch4-check-sats-clone-and-copy-traits.rs  ch4-check-sats-with-copy-trait.rs  ch4-impossible-addition.rs  ch4-rc-groundstation.rs  ch4-rc-refcell-groundstation.rs  ch4-sat-mailbox.rs  ch4-short-lived-strategy.rs  ch4-u16-to-oblivion-and-beyond.rs  ch4-usage-counters-2.rs  ch4-usage-counters-4.rs  ch4-usage-counters-5.rs  ch4-usage-counters-6.rs
ch5/: ch5-bit-patterns.rs  ch5-check-sats-2.rs  ch5-endianness.rs  ch5-f32-as-u32.rs  ch5-factorial-uint.rs  ch5-factorial-usize.rs  ch5-fixed-width.rs  ch5-impossible-add.rs  ch5-int-copy.rs  ch5-int-move.rs  ch5-int-vs-int.rs  ch5-to-oblivion  ch5-to-oblivion.rs  ch5-u8-to-mock-rand.rs  ch5-update-scores.rs  ch5-visualising-f32.rs  ch5-visualizing-f32.rs  ch6-spawning-a-thread.rs
ch5/ch5-cpu1/: Cargo.toml
ch5/ch5-cpu2/: Cargo.toml
ch5/ch5-cpu3/: Cargo.toml
ch5/ch5-cpu4/: Cargo.toml
ch5/ch5-genfib/: Cargo.toml
ch5/ch5-message-store/: Cargo.toml
ch5/ch5-q/: Cargo.toml
ch6/: ch6-pointer-intro.rs
ch6/ch6-gentext/: Cargo.toml
ch6/ch6-heap-vs-stack/: Cargo.toml
ch6/ch6-heap-vs-stack-intro/: Cargo.toml
ch6/ch6-meminfo-win/: Cargo.toml
ch6/ch6-memscan-1/: Cargo.toml
ch6/ch6-memscan-2/: Cargo.toml
ch6/ch6-memscan-3/: Cargo.toml
ch6/ch6-particles/: Cargo.toml  Dockerfile  Vagrantfile  alloc.plot  alloc.tsv
ch6/ch6-particles/src/: main.rs
ch6/ch6-tracing-output/: plot-allocation-times-by-allocation-size.plot
ch7/ch7-abort/: Cargo.toml
ch7/ch7-actionkv/: Cargo.toml
ch7/ch7-actionkv/src/: akv_btree.rs  akv_diskidx.rs  akv_mem.rs  lib.rs
ch7/ch7-actionkv1/: Cargo.toml  misc.val
ch7/ch7-actionkv1/src/: akv_mem.rs  lib.rs
ch7/ch7-actionkv2/: Cargo.toml  mist.akv
ch7/ch7-actionkv2/src/: akv_disk.rs  akv_mem.rs  lib.rs
ch7/ch7-debug/: Cargo.toml
ch8/ch8-mget/: Cargo.toml  setup.sh  teardown.sh
ch8/ch8-mget/src/: dns.rs  ethernet.rs  http.rs  main.rs
ch9/: Vagrantfile
ch9/ch9-clock2/: Cargo.toml
ch9/ch9-clock2/src/: main.rs
ch9/ch9-clock3/: Cargo.toml  Dockerfile
ch9/ch9-clock3/src/: main.rs
(+129 files in other folders)
