[package]
name = "ch6-particles"
version = "0.1.0"
authors = ["TS McNamara <code@timmcnamara.co.nz>"]

[dependencies]
piston_window = "0.73"
piston2d-graphics = "0.23"
rand = "0.3"
#piston_window = "0.75"
#piston2d-graphics = "0.24"
#rand = "0.4"

#glutin = "0.11"
#cpuprofiler = "0.0.2"
#lazy_static = "1.0"