[package]
name = "actionkv"
version = "0.1.0"
authors = ["Tim McNamara <code@timmcnamara.co.nz>"]

[dependencies]
crc = "1.7"
byteorder = "1.2"
# akv_disk
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]] # [[]] is needed because of TOML's array syntax. A crate may have multiple binaries, but only a single library.
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_diskidx.rs"

[[bin]]
name = "akv_btree"
path = "src/akv_btree.rs"